Adding user and user service.
First steps taken for a web-UI using Angular!
